ingress_contoller/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: 
    http:
      paths:
        - path: /jenkins
          pathType: Prefix
          backend:
            service:
              name: jenkins-service
              port:
                number: 8080
